Fix sidebar z-index

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   max-height: calc(100vh + -65px);
-  /*height:100%;*/
+  z-index: 2000;
   width: 250px;
   overflow: auto;
   background-color: #303030;
